# triadica-space.rs

./: .gitignore  Cargo.toml  README.md  index.html  package.cirru  package.json
.github/workflows/: upload.yaml
demo_triadica/: Cargo.toml  index.html  package.json
demo_triadica/examples/: slow.rs
demo_triadica/shaders/: demo.vert
demo_triadica/src/: container.rs  lib.rs  shape.rs
demo_triadica/web/: main.mts  style.css
shaders/: demo.frag  demo.vert
src/: lib.rs  path.rs  viewer.rs
triadica/: Cargo.toml
triadica/src/: alias.rs  component.rs  lib.rs  primes.rs  program.rs  viewer.rs
web/: control.cirru  main.mjs  main.mts  style.css
