
[package]
name = "demo-triadica-space"
version = "0.1.0"
edition = "2021"
description = "WebGL demo"
license = "MIT"
repository = "https://github.com/Quatrefoil-GL/triadica-space.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"
quaternions = "0.5.0-a2"
glam = "0.21.3"
triadica = { path = "../triadica" }

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies.web-sys]
version = "0.3.60"
features = [
  "console",
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  "WebGlUniformLocation",
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[profile.dev]
lto = true
opt-level = "z"
